# WebPurifier

./: .eslintrc.json  .gitignore  INSTALLATION.md  README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/alembic/: env.py
backend/alembic/versions/: 1c1e5e5a0d8b_update_embedding_dimension_to_1024.py  4f92dbe5dc1b_serialize_category_embeddings.py  87d59d9f52e4_create_initial_tables.py  d8ae1de7be0e_add_password_hash_to_users.py
backend/app/: db.py  main.py
backend/app/api/: purifier.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/v1/: routers.py
backend/app/api/v1/endpoints/: filter.py
backend/app/api/v2/: routers.py
backend/app/api/v2/endpoints/: auth.py  category.py  feedback.py  filter.py
backend/app/core/: config.py  security.py
backend/app/schemas/: filter.py
backend/app/schemas/v1/: filter.py
backend/app/schemas/v2/: auth.py  category.py  feedback.py  filter.py
backend/app/services/v1/: filter.py  llm.py
backend/app/services/v2/: auth.py  category.py  category_cache.py  embedding.py  embedding_cache.py  feedback.py  similarity.py  vector.py
backend/app/v2/: models.py
backend/initdb/: init-vector.sql
backend/pgadmin/: servers.json
frontend/: .gitignore  README.md  manifest.json  options.html  package-lock.json  package.json  popup.html  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/background/: index.js
frontend/css/: content.css  (+1 more)
(+58 files in other folders)
